@@ -1,5 +1,17 @@
 package io.quarkiverse.reactive.messaging.nats.jetstream.processors.publisher;
 
+
+import static io.smallrye.reactive.messaging.tracing.TracingUtils.traceIncoming;
+
+import java.time.Duration;
+import java.util.Arrays;
+import java.util.Optional;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.atomic.AtomicReference;
+
+import org.eclipse.microprofile.reactive.messaging.Message;
+import org.jboss.logging.Logger;
 import io.nats.client.*;
 import io.nats.client.api.ConsumerConfiguration;
 import io.opentelemetry.instrumentation.api.instrumenter.Instrumenter;
@@ -38,6 +50,7 @@ public class MessagePublisherProcessor implements MessageProcessor {
     private final AtomicReference<Status> status;
 
     private volatile JetStreamSubscription subscription;
+    private volatile Dispatcher dispatcher;
     private volatile boolean closed = false;
 
     public MessagePublisherProcessor(final JetStreamClient jetStreamClient,
@@ -59,11 +72,19 @@ public class MessagePublisherProcessor implements MessageProcessor {
     @Override
     public void close() {
         try {
-            subscription.drain(Duration.ofMillis(1000));
-        } catch (InterruptedException e) {
-            logger.errorf("Interrupted while draining subscription");
+            if (subscription.isActive()) {
+                subscription.drain(Duration.ofMillis(1000));
+            }
+        } catch (InterruptedException | IllegalStateException e) {
+            logger.warnf("Interrupted while draining subscription");
         }
-        subscription.unsubscribe();
+        try {
+            if (subscription.isActive()) {
+                subscription.unsubscribe();
+            }
+        } catch (IllegalStateException e) {
+            logger.warnf("Failed to unsubscribe subscription");
+        }
         closed = true;
         jetStreamClient.close();
     }
@@ -92,7 +113,7 @@ public class MessagePublisherProcessor implements MessageProcessor {
             try {
                 final var jetStream = connection.jetStream();
                 final var subject = configuration.getSubject();
-                final var dispatcher = connection.createDispatcher();
+                dispatcher = connection.createDispatcher();
                 final var pushOptions = createPushSubscribeOptions(configuration);
                 subscription = jetStream.subscribe(subject, dispatcher, emitter::emit, false, pushOptions);
                 setStatus(true, "Is connected");
@@ -110,8 +131,10 @@ public class MessagePublisherProcessor implements MessageProcessor {
                 setStatus(false, e.getMessage());
                 emitter.fail(e);
             }
-        }).emitOn(runnable -> connection.context().runOnContext(runnable))
-                .map(message -> create(message, connection.context(), configuration));
+        })
+                .onTermination().invoke(() -> shutDown(dispatcher))
+                .emitOn(runnable -> connection.context().runOnContext(runnable))
+                .map(message -> create(message, traceEnabled, payloadType, connection.context()));
     }
 
     public Multi<? extends org.eclipse.microprofile.reactive.messaging.Message<?>> pull(Connection connection) {
@@ -130,9 +153,9 @@ public class MessagePublisherProcessor implements MessageProcessor {
                     .supplier(() -> nextNatsMessage(reader, pollTimeout))
                     .until(message -> closed || !subscription.isActive())
                     .runSubscriptionOn(pullExecutor)
-                    .onTermination().invoke(pullExecutor::shutdownNow)
+                    .onTermination().invoke(() -> shutDown(pullExecutor))
                     .emitOn(runnable -> connection.context().runOnContext(runnable))
-                    .map(message -> create(message, connection.context(), configuration));
+                    .flatMap(message -> createMulti(message, traceEnabled, payloadType, connection.context()));
         } catch (Throwable e) {
             logger.errorf(e, "Failed subscribing to stream with message: %s", e.getMessage());
             setStatus(false, e.getMessage());
@@ -180,9 +203,17 @@ public class MessagePublisherProcessor implements MessageProcessor {
         }
     }
 
+    private Multi<org.eclipse.microprofile.reactive.messaging.Message<?>> createMulti(io.nats.client.Message message,
+            boolean tracingEnabled, Class<?> payloadType, Context context) {
+        if (message == null || message.getData() == null) {
+            return Multi.createFrom().empty();
+        } else {
+            return Multi.createFrom().item(() -> create(message, tracingEnabled, payloadType, context));
+        }
+    }
+
     private boolean isConsumerAlreadyInUse(Throwable throwable) {
-        if (throwable instanceof JetStreamApiException) {
-            final var jetStreamApiException = (JetStreamApiException) throwable;
+        if (throwable instanceof JetStreamApiException jetStreamApiException) {
             return jetStreamApiException.getApiErrorCode() == CONSUMER_ALREADY_IN_USE;
         }
         return false;
@@ -231,7 +262,7 @@ public class MessagePublisherProcessor implements MessageProcessor {
         if (backoff == null || backoff.length == 0) {
             return Optional.empty();
         } else {
-            return Optional.of(Arrays.stream(backoff).map(MessagePublisherProcessor::toDuration).collect(Collectors.toList())
+            return Optional.of(Arrays.stream(backoff).map(MessagePublisherProcessor::toDuration).toList()
                     .toArray(new Duration[] {}));
         }
     }
@@ -240,4 +271,23 @@ public class MessagePublisherProcessor implements MessageProcessor {
         return Duration.parse(value);
     }
 
+    private void shutDown(ExecutorService pullExecutor) {
+        try {
+            pullExecutor.shutdownNow();
+        } catch (Exception e) {
+            logger.errorf(e, "Failed to shutdown pull executor");
+        }
+        close();
+    }
+
+    private void shutDown(Dispatcher dispatcher) {
+        try {
+            if (dispatcher != null && dispatcher.isActive()) {
+                dispatcher.unsubscribe(subscription);
+            }
+        } catch (Exception e) {
+            logger.errorf(e, "Failed to shutdown pull executor");
+        }
+        close();
+    }
 }
